<resources>
    <string name="app_name">Lab4-Multimedia</string>

    <string name="settings">Settings</string>
    <string name="action_settings">Open settings</string>
    <string name="equalizer">Equalizer</string>
    <string name="action_equalizer">Open equalizer settings</string>
    <string name="fab_content_desc">Open the menu for selecting song library source</string>
    <string name="edit_metadata_button_content_desc">Allow editing of song\'s metadata for title and artist</string>
    <string name="remove_cloud_song_button_content_desc">Remove song from the cloud library</string>
    <string name="empty_content_desc">Used for items alignment</string>
    <string name="song_info_cover_content_desc">Display a image for the song cover</string>
    <string name="onboarding_sign_in">Sign in</string>
    <string name="onboarding_register">Register</string>
    <string name="onboarding_offline_mode">Offline mode</string>
    <string name="onboarding_username">Username</string>
    <string name="onboarding_email_address">Email address</string>
    <string name="onboarding_password">Password</string>
    <string name="onboarding_continue">Continue</string>
    <string name="onboarding_create_account">Create an account</string>
    <string name="onboarding_go_to_signup">Don\'t have an account ? Sign Up</string>
    <string name="onboarding_go_to_signin">Already have an account ? Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_content_desc">Sign out of your cloud account</string>
    <string name="edit_metadata_title_hint">Change the song\'s title</string>
    <string name="edit_metadata_artist_hint">Change the song\'s artist</string>
    <string name="default_title">Unknown</string>
    <string name="default_artist">Unknown</string>
    <string name="library_local_device">Local device</string>
    <string name="library_cloud">Cloud</string>
    <string name="cloud_library_info_welcome">Your library</string>
    <string name="cloud_library_shuffle_button">Shuffle play</string>
    <string name="cloud_library_add_songs_button">Add songs</string>
    <string name="empty_title_hint">Choose a song from your preferred library</string>
    <string name="empty_artist_hint">Hit the floating button below !</string>

</resources>