<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_equalizer"
        android:title="@string/equalizer"
        android:contentDescription="@string/action_equalizer"
        android:icon="@drawable/ic_baseline_equalizer_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:contentDescription="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sign_in_or_out"
        android:title="@string/sign_out"
        android:contentDescription="@string/sign_out_content_desc"
        app:showAsAction="never"/>
</menu>