<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cloud_song_info_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cloud_song_edit_metadata_button">

        <TextView
            android:id="@+id/cloud_song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/default_title"/>

        <TextView
            android:id="@+id/cloud_song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cloud_song_title"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/default_artist"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/cloud_song_edit_metadata_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_edit_metadata_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cloud_song_remove_cloud_song_button"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/edit_metadata_button_content_desc" />

    <ImageButton
        android:id="@+id/cloud_song_remove_cloud_song_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_baseline_remove_cloud_song_24"
        android:contentDescription="@string/remove_cloud_song_button_content_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>