<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".cloud_media_explorer.CloudMediaExplorerFragment"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/cloud_library_status_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/cloud_library_info_welcome"/>

    <Button
        android:id="@+id/cloud_shuffle_play_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cloud_library_status_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cloud_add_songs_button"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cloud_library_shuffle_button"
        app:backgroundTint="@null"
        android:background="@drawable/bg_button_progress"
        style="@style/Widget.MaterialComponents.Button"/>

    <Button
        android:id="@+id/cloud_add_songs_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cloud_library_status_info"
        app:layout_constraintLeft_toRightOf="@id/cloud_shuffle_play_button"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cloud_library_add_songs_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cloud_library_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cloud_shuffle_play_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constrainedHeight="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>